@@ -1,5 +1,7 @@
 = HEAD
 
+* Move RodaResponse#set_cookie and #delete_cookie to cookies plugin (jeremyevans)
+
 * Deprecate RodaRequest#full_path_info, use #path instead (jeremyevans)
 
 * Add class_delegate to the delegate plugin (jeremyevans)
